deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraform-aws-eks
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: terraform-aws-eks

  template:
    metadata:
      labels:
        app: terraform-aws-eks

    spec:
      containers:
      - name: terraform-aws-eks
        image: 336359748215.dkr.ecr.ap-south-1.amazonaws.com/terraform-aws-eks:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
