service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraform-aws-eks-service
  namespace: dev

spec:
  selector:
    app: terraform-aws-eks

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
