ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraform-aws-eks-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: terraform-aws-eks-service
            port:
              number: 80
